[tool.poetry]
name = "community-monitor"
version = "0.1.0"
description = ""
authors = ["phate_wang"]
license = "Apache2.0"
readme = "README.md"
packages = [{include = "monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
meilisearch = "^0.28.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
rocketry = "^2.5.1"
arxiv = "^1.4.7"
pandas = "^2.0.2"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /\.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams"
ignore = ["build", "dist", ".venv"]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "C0114", # missing-module-docstring
  "C0115", # missing-class-docstring
  "C0116", # missing-function-docstring
]
